--- a/AngularSPA/src/app/core/Layout/header.component.html
+++ b/AngularSPA/src/app/core/Layout/header.component.html
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link">Home</a>
+        <a class="nav-link" [routerLink]="''">Home</a>
       </li>
       <li class="nav-item active">
-          <a class="nav-link">Movies</a>
+          <a class="nav-link" [routerLink]="'/Genre'">Genres</a>
         </li>
       <li class="nav-item">
-        <a class="nav-link">Genres</a>
+        <a class="nav-link" [routerLink]="'/Cast'">Casts</a>
       </li>
         <li class="nav-item">
           <a class="nav-link">Reviews</a>
